# bugger

./: .gitignore  .gitmodules  CMakeLists.txt
artwork/: antsprites.xcf  spritesheet.xcf
cmake/modules/: Info.plist.in  Info.plist.plist
doc/: design.txt
doc/design/: resource_framework.dia  resource_framework.dia.autosave
proj/xcode/bugger/bugger-ios/: bugger-ios-Info.plist
proj/xcode/bugger/bugger-macosx/: bugger-macosx-Info.plist
proj/xcode/bugger/bugger.xcodeproj/: project.pbxproj
proj/xcode/bugger/bugger.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
proj/xcode/bugger/bugger.xcodeproj/project.xcworkspace/xcshareddata/: bugger.xccheckout  bugger.xcscmblueprint
proj/xcode/bugger/bugger.xcodeproj/project.xcworkspace/xcuserdata/fizban.xcuserdatad/: UserInterfaceState.xcuserstate
proj/xcode/bugger/bugger.xcodeproj/xcuserdata/fizban.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
proj/xcode/bugger/bugger.xcodeproj/xcuserdata/lhaynes6.xcuserdatad/xcschemes/: bugger-ios.xcscheme  bugger-macosx.xcscheme  xcschememanagement.plist
proj/xcode/wrangler/wrangler-ios/: wrangler-ios-Info.plist
proj/xcode/wrangler/wrangler-macosx/: wrangler-macosx-Info.plist
proj/xcode/wrangler/wrangler.xcodeproj/: project.pbxproj
resources/ios/shaders/: sprite.fsh  sprite.vsh
resources/mac/en.lproj/: MainWindow.xib
resources/mac/shaders/: sprite.fsh  sprite.vsh
resources/shaders/: sprite.fsh  sprite.vsh
shaders/game/: game_sprite.fsh
shaders/test/: test_shader.fsh  test_shader.vsh
src/app/appios/: appios_appdelegate.h  appios_appdelegate.mm  appios_main.mm  appios_prefix.pch  appios_viewcontroller.h  appios_viewcontroller.mm
src/app/appmac/: appmac_appdelegate.h  appmac_appdelegate.mm  appmac_main.mm  appmac_prefix.pch
src/game/: game_client.cpp  game_client.h  game_gl.h  game_sprite.cpp  game_sprite.h
src/ui/uigen/: uigen_displaytimer.cpp  uigen_displaytimer.h  uigen_glwindow.cpp  uigen_glwindow.h
src/ui/uiios/: uiios_displaytimer.h  uiios_displaytimer.mm  uiios_openglwindow.h  uiios_openglwindow.mm  uiios_renderingcontext.h  uiios_renderingcontext.mm
src/ui/uimac/: uimac_displaytimer.h  uimac_displaytimer.mm  uimac_openglwindow.h  uimac_openglwindow.mm  uimac_renderingcontext.h  uimac_renderingcontext.mm
src/util/: util_bundlefilesystem.cpp  util_bundlefilesystem.h  util_convert.cpp  util_convert.h  util_imagepng.cpp  util_imagepng.h
